新的range gogogo